# cold-call-coach

./: .gitignore  HANDOFF.md  NOTES.md  README.md  build-cuda.bat  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  History.tsx  Pet.tsx  Scoreboard.tsx  Settings.tsx  context.ts  outputs.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: attribution_probe.rs  capture_probe.rs  live_probe.rs  transcribe_probe.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: aec.rs  audio.rs  coaching.rs  diarize.rs  lib.rs  main.rs  transcribe.rs
src-tauri/windows/: hooks.nsh
